# Damas

./: CMakeLists.txt  README.md  damas_entrega_final.cpp  damas_solitarias.C
Pacotes/Erros/: erros.H  erros_impl.H
Pacotes/Exemplos/: Makefile  caixa1.C  campainha1.C  data1.C  ecra1.C  ecra2.C  ecra3.C  ecra4.C  exemplo1.C  exemplo2.C  exemplo3.C  justificacao1.C  manipulador1.C  mensageiro1.C  menu1.C  menu2.C  objectocor1.C  objectocor2.C  objectocor3.C  segmentos1.C  simbolo1.C  teclado1.C
Pacotes/IPC++/: ipc.H  mensageiro.H  mensageiro.cpp  mensageiro_impl.H
Pacotes/Slang++/: ecra.H  ecra.cpp  ecra_impl.H  menu.H  menu.cpp  menu_impl.H  slang.H  teclado.H  teclado.cpp  teclado_impl.H
Pacotes/Utilitarios/: cadeia.H  cadeia.cpp  cadeia_impl.H  data.H  data.cpp  data_impl.H  ignoradores.H  ignoradores.cpp  ignoradores_impl.H  localizacao.H  localizacao.cpp  localizacao_impl.H  utilitarios.H
